--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
   manuscripts:
-    title: 'Journal Articles'    
+    title: 'Journal Articless'    
   conferences:
     title: 'Conference Papers'
 
